--- a/sass/bio/_mainBio.scss
+++ b/sass/bio/_mainBio.scss
@@ -21,7 +21,7 @@
             padding: 20px;
             p {
                 color: #000000;
-                font-size: 15px;
+                font-size: 14px;
                 line-height: 1.4;
             }
         }
@@ -33,7 +33,7 @@
             padding: 20px;
             margin-top: 27px;
             p {
-                font-size: 13px;
+                font-size: 12px;
             }
         }
     }
@@ -65,10 +65,10 @@
         #contenedorTextobio .biografiaAbout {
             margin-top: 30px;
             margin-bottom: 20px;
-            p {
-                font-size: 10px;
-            }
         }
+    .biografiaAbout p {
+        font-size: 11px;
+    }
     }  
 }
 }
@@ -79,6 +79,9 @@
             width: 250px;
             height: 250px;
             margin-top: 0;
+        }
+    .biografiaAbout p {
+        font-size: 11px;
         }
     }
 }
